	PR tree-optimization/81555 	PR tree-optimization/81556 	* tree-ssa-reassoc.c (rewrite_expr_tree): Add NEXT_CHANGED argument, 	if true, force CHANGED for the recursive invocation. 	(reassociate_bb): Remember original length of ops array, pass 	len != orig_len as NEXT_CHANGED in rewrite_expr_tree call.

* gcc.c-torture/execute/pr81555.c: New test.
	* gcc.c-torture/execute/pr81556.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@250609 138bc75d-0d04-0410-961f-82ee72b054a4